[project]
name = "chronohealth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.5",
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.19",
    "langchain-huggingface>=1.2.1",
    "langchain-tools>=0.1.34",
    "pypdf>=6.9.1",
    "sentence-transformers>=5.3.0",
    "streamlit>=1.55.0",
]
